# Graphite

./: .gitmodules  Cargo.toml  README.md  world.magma
assets/: registry_codec_1.19.json
binary/: Cargo.toml
command/: Cargo.toml
command_derive/: Cargo.toml
concierge/: Cargo.toml
crates/graphite_anvil/: Cargo.toml
crates/graphite_anvil/src/: entity.rs  lib.rs  world.rs
crates/graphite_binary/: Cargo.toml
crates/graphite_binary/benches/: binary.rs  nbt.rs
crates/graphite_binary/macros/: Cargo.toml
crates/graphite_binary/macros/src/: lib.rs
crates/graphite_binary/src/nbt/: cached_nbt.rs  decode.rs  encode.rs  mod.rs  pretty.rs  reference.rs
crates/graphite_binary/src/nbt/stringified/: from_snbt.rs  mod.rs  to_snbt.rs
crates/graphite_binary/src/slice_serialization/: blob.rs  from.rs  mod.rs  sized_array.rs  varint.rs
crates/graphite_binary/src/varint/: decode.rs  encode.rs
crates/graphite_command/: Cargo.toml
crates/graphite_command/macros/: Cargo.toml
crates/graphite_command/macros/src/: lib.rs
crates/graphite_command/src/: dispatcher.rs  lib.rs  types.rs
crates/graphite_command/src/minecraft/: brigadier.rs  mod.rs  parsers.rs  proto_nodes.rs
crates/graphite_concierge/: Cargo.toml
crates/graphite_concierge/src/: lib.rs
crates/graphite_core_server/: Cargo.toml
crates/graphite_core_server/src/: lib.rs  particle.rs  text.rs  types.rs
crates/graphite_core_server/src/entity/: entity.rs  entity_view_controller.rs  mod.rs
crates/graphite_core_server/src/inventory/: item_stack.rs  mod.rs
crates/graphite_core_server/src/player/: mod.rs  player.rs
crates/graphite_core_server/src/registry/: biome.rs  damage_type.rs  dimension_type.rs  mod.rs  registry.rs
crates/graphite_core_server/src/world/: chunk.rs  chunk_section.rs  chunk_view_diff.rs  entity_iterator.rs  mod.rs  paletted_container.rs  world.rs
crates/graphite_entity/: Cargo.toml
crates/graphite_entity/src/: block_display.rs  custom.rs  item_display.rs  lib.rs  text_display.rs
crates/graphite_mc_constants/: Cargo.toml  build.rs
crates/graphite_mc_constants/data/: attributes.json  blocks.json  custom_statistics.json  dye_colors.json  enchantments.json  entities.json  items.json  potions.json  villager_professions.json
crates/graphite_mc_constants/data/loot_tables/: block_loot_tables.json  chest_loot_tables.json
crates/graphite_mc_constants/data/tags/: block_tags.json  gameplay_tags.json
crates/graphite_mc_constants/src/: block.rs  block_parameter.rs  entity.rs  item.rs  lib.rs  placement.rs
crates/graphite_mc_constants/src/tags/: block.rs  mod.rs
crates/graphite_mc_protocol/: Cargo.toml
crates/graphite_mc_protocol/src/: lib.rs  types.rs
crates/graphite_mc_protocol/src/configuration/: clientbound.rs  serverbound.rs
crates/graphite_mc_protocol/src/handshake/: client.rs  mod.rs  serverbound.rs
crates/graphite_mc_protocol/src/login/: client.rs  clientbound.rs  server.rs  serverbound.rs
crates/graphite_mc_protocol/src/play/: client.rs  clientbound.rs  mod.rs  server.rs  serverbound.rs
crates/graphite_mc_protocol/src/status/: client.rs  clientbound.rs  serverbound.rs
crates/graphite_net/: Cargo.toml
crates/graphite_net/src/: network_buffer.rs  network_handler.rs  packet_helper.rs
crates/graphite_network/: Cargo.toml
crates/graphite_network/src/: lib.rs  packet_buffer.rs  write_buffer.rs
crates/graphite_pathfinding/: Cargo.toml
crates/graphite_pathfinding/src/: lib.rs  node_cost_evaluator.rs  node_traverser.rs  path.rs  path_finder.rs  path_navigator.rs
crates/graphite_server/: Cargo.toml
crates/graphite_server/benches/: chunk_view_diff.rs
crates/graphite_server/macros/: Cargo.toml
crates/graphite_server/macros/src/: lib.rs  universe.rs  world.rs
crates/graphite_server/src/: gamemode.rs  lib.rs  ticker.rs  universe.rs
crates/graphite_server/src/entity/: components.rs  position.rs
crates/graphite_server/src/inventory/: inventory_handler.rs  itemstack.rs
crates/graphite_server/src/player/: interaction.rs  mod.rs  packet_buffer.rs  player.rs  player_connection.rs  player_packet_handler.rs  player_settings.rs  player_vec.rs  proto_player.rs
crates/graphite_server/src/world/: block_entity_storage.rs  block_update.rs  chunk.rs  chunk_list.rs  chunk_section.rs  chunk_view_diff.rs  mod.rs  paletted_container.rs  placement_context.rs  world.rs  world_map.rs
crates/graphite_server/tests/: world.rs
crates/graphite_server/tests/common/: fake_player.rs  mod.rs  service.rs
example_server/: Cargo.toml  world.magma
example_server/src/: echo.rs  error.rs  main.rs  player.rs  player_connection.rs  player_vec.rs  proto_player.rs  universe.rs  world.rs
magma/: Cargo.toml
minecraft_constants/: Cargo.toml  build.rs
minecraft_constants/data/: biomes.json  blocks.json  command_arguments.json  dimension_types.json  entities.json  fluids.json  game_events.json  items.json  map_colors.json  particles.json  potion_effects.json  sound_sources.json  sounds.json  villager_types.json
minecraft_constants/data/loot_tables/: entity_loot_tables.json  gameplay_loot_tables.json
minecraft_constants/data/tags/: entity_type_tags.json  fluid_tags.json  item_tags.json
minecraft_constants/src/: block.rs  block_parameter.rs  entity.rs  item.rs  lib.rs  placement.rs
net/: Cargo.toml
server/: Cargo.toml
server/benches/: chunk_view_diff.rs
server/proptest-regressions/world/: chunk_view_diff.txt
server/src/: error.rs  gamemode.rs  lib.rs  position.rs  universe.rs  world.rs
server/src/entity/: components.rs  mod.rs  position.rs
server/src/inventory/: inventory_handler.rs  itemstack.rs  mod.rs
server/src/player/: generic.rs  interaction.rs  metadata.rs  mod.rs  packet_buffer.rs  player.rs  player_connection.rs  player_packet_handler.rs  player_settings.rs  player_vec.rs  proto_player.rs
server/src/world/: block_entity_storage.rs  block_update.rs  chunk.rs  chunk_section.rs  chunk_view_diff.rs  mod.rs  paletted_container.rs  placement_context.rs  world.rs
server/tests/: world.rs
server/tests/common/: fake_player.rs  mod.rs  service.rs
(+109 files in other folders)
