[package]
name = "example_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bevy_ecs = "0.7.0"
rand = "0.8.5"

server = { path = "../server" }
net = { path = "../net" }
concierge = { path = "../concierge" }
command = { path = "../command" }
protocol = { path = "../protocol" }
minecraft_constants = { path = "../minecraft_constants" }
magma = { path = "../magma" }