[package]
name = "minecraft_constants"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.31"
num_enum = "0.5.7"
readonly = "0.2.1"
protocol = { path = "../protocol" }
binary = { path = "../binary" }

[build-dependencies]
thiserror = "1.0.31"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
convert_case = "0.5.0"
anyhow = "1.0.57"
indexmap = { version = "1.9.1", features = ["serde"] }