[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bytes = "1.1.0"
rand = "0.8.5"
thiserror = "1.0.31"
slab = "0.4.6"
queues = "1.1.0"
io-uring = { version = "0.5.2", features = ["unstable"] }
quartz_nbt = "0.2.6"
bytemuck = "1.10.0"
legion = { version = "0.4.0", default-features = false }
num = "0.4.0"
heapless = "0.7.15"

binary = { path = "../binary" }
net = { path = "../net" }
protocol = { path = "../protocol" }
sticky = { path = "../sticky" }
command = { path = "../command" }
text_component = { path = "../text_component" }

[dev-dependencies]
quickcheck = "1.0.3"
criterion = "0.3.6"

[[bench]]
name = "chunk_view_diff"
harness = false