[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bytes = "1.1.0"
rand = "0.8.5"
thiserror = "1.0.31"
slab = "0.4.6"
queues = "1.1.0"
io-uring = { version = "0.5.2", features = ["unstable"] }
quartz_nbt = "0.2.6"
bytemuck = "1.10.0"
num = "0.4.0"
heapless = "0.7.15"
bevy_ecs = "0.7.0"

binary = { path = "../binary" }
net = { path = "../net" }
protocol = { path = "../protocol" }
sticky = { path = "../sticky" }
command = { path = "../command" }
text_component = { path = "../text_component" }
minecraft_constants = { path = "../minecraft_constants" }

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3.6"
minecraft_constants = { path = "../minecraft_constants" }

[[bench]]
name = "chunk_view_diff"
harness = false