[package]
name = "graphite_command"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
description = "Command parsing and dispatch framework for the graphite_minecraft project"

[dependencies]
anyhow = "1.0.57"
thiserror = "1.0.31"
bytes = "1.1.0"
maplit = "1.0.2"
bytemuck = "1.10.0"

graphite_command_macros = { path = "macros", version = "0.1.0" }
graphite_mc_protocol = { path = "../graphite_mc_protocol", version = "0.1.0" }