[package]
name = "graphite_mc_constants"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Code-generated constants for Minecraft for the graphite_minecraft project"

exclude = [
    "data/*",
    "build/*"
]

[dependencies]
thiserror = "1.0.31"
num_enum = "0.5.7"
readonly = "0.2.1"
graphite_mc_protocol = { path = "../graphite_mc_protocol", version = "0.1.0" }
graphite_binary = { path = "../graphite_binary", version = "0.1.0" }

[build-dependencies]
thiserror = "1.0.31"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
convert_case = "0.5.0"
anyhow = "1.0.57"
indexmap = { version = "1.9.1", features = ["serde"] }