[package]
name = "graphite_net"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
thiserror = "1.0.31"
io-uring = { version = "0.5.2", features = ["unstable"] }
slab = "0.4.6"
libc = "0.2.126"
nix = "0.24.1"

graphite_binary = { path = "../graphite_binary" }
graphite_mc_protocol = { path = "../graphite_mc_protocol" }
graphite_mc_constants = { path = "../graphite_mc_constants" }